--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "wrangler": "^3.15.0"
   },
   "dependencies": {
+    "hono": "^3.9.2",
     "itty-router": "^4.0.23",
     "toucan-js": "^3.3.1"
   }
